fix: Header no longer jumps between pages

--- a/frontend/src/components/HeaderSimple/HeaderSimple.module.css
+++ b/frontend/src/components/HeaderSimple/HeaderSimple.module.css
@@ -1,8 +1,9 @@
 .wrapper {
   height: var(--app-shell-header-height);
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
+  padding: 0 var(--mantine-spacing-xl);
 }
 
 .linksDesktop {
@@ -44,14 +45,15 @@
 }
 
 .burgerIcon {
-  position: absolute;
-  top: 10px;
-  right: 10px;
   z-index: 110;
   cursor: pointer;
 }
 
 @media (min-width: $mantine-breakpoint-xs) {
+  .wrapper {
+    justify-content: space-between;
+  }
+
   .mobileMenu {
     display: none;
   }
