--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -3,3 +3,7 @@
   width: 100%;
   max-width: $mantine-breakpoint-lg;
 }
+
+.header {
+  width: 100vw;
+}
